--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: org.postgresql.Driver
 
   liquibase:
-    change-log: classpath:db/changelog/main/changelog.xml
+    change-log: classpath:db/main/changelog.xml
     default-schema: public
 
   jpa:
